[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.7"
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
openblas-src = "0.10.8"
regex = "1.10.2"
